--- a/index.html
+++ b/index.html
@@ -18,5 +18,19 @@
     <h1 class = "welcome-H1"> Welcome To The Website</h1>
     <img src = "images/github.png" alt = "image of me" class = "my-img"/>
     </div>
+    <div class = "footer">
+        <ul>
+            <li> 
+                <a href = "https://github.com/SinghAgamGit">
+                    <img src = "images/github.png" alt = "img of github" class = "footer_img"/>
+                </a>
+            </li>
+            <li>
+                <a href = "https://www.linkedin.com/in/agamsinghuottawa/">
+                    <img src = "images/LinkedIn_icon.svg.png" of github" class = "footer_img"/>
+                </a>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
