text added in footer

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <img src = "images/github.png" alt = "image of me" class = "my-img"/>
     </div>
     <div class = "footer">
+        <h2>check out my socials:</h2>
         <ul>
             <li> 
                 <a href = "https://github.com/SinghAgamGit">
