added meaningful nav names

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test-repo</title>
+    <title>Portafolio</title>
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body class = "background">
     <nav>
         <ul>
-            <li>placeholder</li>
-            <li>placeholder</li>
-            <li>placeholder</li>
+            <li>Personal Site</li>
+            <li>About Me</li>
+            <li>Socials</li>
         </ul>
     </nav>
     <div class = "welcome-txt">
-    <h1 class = "welcome-H1"> Welcome To The Website</h1>
+    <h1 class = "welcome-H1"> Welcome To My Website</h1>
     <img src = "images/github.png" alt = "image of me" class = "my-img"/>
     </div>
     <div class = "footer">
