about me section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body class = "background">
+
     <nav>
         <ul>
             <li>Personal Site</li>
@@ -14,24 +15,34 @@
             <li>Socials</li>
         </ul>
     </nav>
+
+
     <div class = "welcome-txt">
-    <h1 class = "welcome-H1"> Welcome To My Website</h1>
+    <h1 class = "welcome-H1"> Welcome To My Test Website</h1>
     <img src = "images/github.png" alt = "image of me" class = "my-img"/>
     </div>
+
+    <div class = "about-me">
+            <h2>About me</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus blanditiis praesentium, minus dolore rerum neque ducimus excepturi, doloribus non velit unde? Dolor quaerat consequatur fugiat tempora qui blanditiis nihil consectetur.</p>
+    </div>
+
+
     <div class = "footer">
         <h2>check out my socials:</h2>
         <ul>
             <li> 
                 <a href = "https://github.com/SinghAgamGit">
-                    <img src = "images/github.png" alt = "img of github" class = "footer_img"/>
+                    <img src = "images/github.png" alt = "logo of github" class = "footer_img"/>
                 </a>
             </li>
             <li>
                 <a href = "https://www.linkedin.com/in/agamsinghuottawa/">
-                    <img src = "images/LinkedIn_icon.svg.png" of github" class = "footer_img"/>
+                    <img src = "images/LinkedIn_icon.svg.png" alt = "logo of linkedin" class = "footer_img"/>
                 </a>
             </li>
         </ul>
     </div>
+
 </body>
 </html>
