--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafolio</title>
     <link rel="stylesheet" href="styles.css"/>
+    <title>Portafolio</title>
 </head>
 <body class = "background">
 
@@ -43,6 +43,6 @@
             </li>
         </ul>
     </div>
-
+<script src = "index.js"></script>
 </body>
 </html>
