working on the caclulator app, finished the css and html asptects moving to js now

--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
     <div class = "footer">
         <h2>check out my socials:</h2>
         <ul>
-            <li> 
+            <li>
+                <a href = "/Calculator/index.html">
+                    <img src = "images/calculator_img.png" alt = "Image for a calculator" class = "calculator_img"/>
+                </a>
+            </li>
+             <li> 
                 <a href = "https://github.com/SinghAgamGit">
                     <img src = "images/github.png" alt = "logo of github" class = "footer_img"/>
                 </a>
@@ -41,7 +46,7 @@
                     <img src = "images/LinkedIn_icon.svg.png" alt = "logo of linkedin" class = "footer_img"/>
                 </a>
             </li>
-        </ul>
+        </ul>  
     </div>
 <script src = "index.js"></script>
 </body>
