base cases for caclulator done, need to work on edge cases now

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -8,16 +8,20 @@
     <link rel="stylesheet" href="calculator.css"/>
 </head>
 <body class = "background">
+    <div class = "title">
+        <h1>This is a basic calculator app</h1>
+        <h2>I made this app to sharpen my JavaScript skills</h2>
+    </div>
     <div class = "calculator-layout">
+        <h3 class="display">0</h3>
         <h3 class= "zero numbers">0</h3>
         <h3 class= "clear numbers">clear</h3>
-        <h3 class= "backspace numbers"> <- </h3>
+        <h3 class= "backspace numbers"> backspace </h3>
         <h3 class = "divide operator">/</h3>
         <h3 class = "multiply operator">x</h3>
         <h3 class = "subtract operator">-</h3>
         <h3 class = "add operator">+</h3>
         <h3 class = "equal operator">=</h3>
-        <h3 class="display">0</h3>
         <h3 class="one numbers">1</h3>
         <h3 class="two numbers">2</h3>
         <h3 class="three numbers">3</h3>
@@ -27,7 +31,6 @@
         <h3 class="seven numbers">7</h3>
         <h3 class="eight numbers">8</h3>
         <h3 class="nine numbers">9</h3>
-
     </div>
     <script src = "index.js"></script>
 </body>
