file location wierd

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h2>check out my socials:</h2>
         <ul>
             <li>
-                <a href = "/Calculator/index.html">
+                <a href = "Calculator/index.html">
                     <img src = "images/calculator_img.png" alt = "Image for a calculator" class = "calculator_img"/>
                 </a>
             </li>
