added a go back button to the calculator

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
     <div class = "footer">
-        <h2>check out my socials:</h2>
+        <h2>check out my calculator app and my socials!:</h2>
         <ul>
             <li>
                 <a href = "Calculator/index.html">
