had to change the url to go back to my new portafolio website

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -11,7 +11,7 @@
     <div class = "title">
         <h1>This is a basic calculator app</h1>
         <h2>I made this app to sharpen my JavaScript skills</h2>
-        <a href = "\index.html">Go to my Portafolio</a>
+        <a href = "https://singhagamgit.github.io/test-repo/">Go to my Portafolio</a>
     </div>
     <div class = "calculator-layout">
         <h3 class="display">0</h3>
