--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -33,6 +33,10 @@
         <h3 class="eight numbers">8</h3>
         <h3 class="nine numbers">9</h3>
     </div>
+    <div class = "end">
+        <h2>Thank you for visiting</h2>
+        <div id = "picture_of_cute_dog"></div>
+    </div>
     <script src = "index.js"></script>
 </body>
 </html>
