--- a/index.html
+++ b/index.html
@@ -3,51 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calculator app</title>
     <link rel="stylesheet" href="styles.css"/>
-    <title>Portafolio</title>
+    <link rel="stylesheet" href="calculator.css"/>
 </head>
 <body class = "background">
-
-    <nav>
-        <ul>
-            <li>Personal Site</li>
-            <li>About Me</li>
-            <li>Socials</li>
-        </ul>
-    </nav>
-
-
-    <div class = "welcome-txt">
-    <h1 class = "welcome-H1"> Welcome To My Test Website</h1>
-    <img src = "images/github.png" alt = "image of me" class = "my-img"/>
+    <div class = "title">
+        <h1>This is a basic calculator app</h1>
+        <h2>I made this app to sharpen my JavaScript skills</h2>
+        <a href = "https://singhagam.ca">Go to my Portafolio</a>
     </div>
-
-    <div class = "about-me">
-            <h2>About me</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus blanditiis praesentium, minus dolore rerum neque ducimus excepturi, doloribus non velit unde? Dolor quaerat consequatur fugiat tempora qui blanditiis nihil consectetur.</p>
+    <div class = "calculator-layout">
+        <h3 class="display">0</h3>
+        <h3 class= "zero numbers">0</h3>
+        <h3 class= "clear numbers">clear</h3>
+        <h3 class= "backspace numbers"> backspace </h3>
+        <h3 class = "divide operator">/</h3>
+        <h3 class = "multiply operator">x</h3>
+        <h3 class = "subtract operator">-</h3>
+        <h3 class = "add operator">+</h3>
+        <h3 class = "equal operator">=</h3>
+        <h3 class="one numbers">1</h3>
+        <h3 class="two numbers">2</h3>
+        <h3 class="three numbers">3</h3>
+        <h3 class="four numbers">4</h3>
+        <h3 class="five numbers">5</h3>
+        <h3 class="six numbers">6</h3>
+        <h3 class="seven numbers">7</h3>
+        <h3 class="eight numbers">8</h3>
+        <h3 class="nine numbers">9</h3>
     </div>
-
-
-    <div class = "footer">
-        <h2>check out my calculator app and my socials!:</h2>
-        <ul>
-            <li>
-                <a href = "Calculator/index.html">
-                    <img src = "images/calculator_img.png" alt = "Image for a calculator" class = "calculator_img"/>
-                </a>
-            </li>
-             <li> 
-                <a href = "https://github.com/SinghAgamGit">
-                    <img src = "images/github.png" alt = "logo of github" class = "footer_img"/>
-                </a>
-            </li>
-            <li>
-                <a href = "https://www.linkedin.com/in/agamsinghuottawa/">
-                    <img src = "images/LinkedIn_icon.svg.png" alt = "logo of linkedin" class = "footer_img"/>
-                </a>
-            </li>
-        </ul>  
+    <div class = "end">
+        <h2>Thank you for visiting</h2>
+        <div id = "picture_of_cute_dog"></div>
     </div>
-<script src = "index.js"></script>
+    <script src = "index.js"></script>
 </body>
 </html>
